api gateaway and feeds service have been updated
